updated product details pages

--- a/contact.html
+++ b/contact.html
@@ -17,9 +17,13 @@
     <header class="header bg-white fixed w-full top-0 z-50 shadow-md">
       <div class="container mx-auto px-4">
         <nav class="flex justify-between items-center py-4">
-          <a href="/" class="text-2xl font-bold text-orange-500"
-            >K.H. Infinity</a
-          >
+          <a href="/" class="text-2xl font-bold text-orange-500">
+            <img
+              src="images/brand/official_logo.svg"
+              alt="K.H. Infinity"
+              class="w-20 h-10"
+            />
+          </a>
           <ul class="hidden md:flex space-x-8">
             <li>
               <a
@@ -328,7 +332,7 @@
         </div>
         <div class="border-t border-gray-700 mt-8 pt-8 text-center">
           <p class="text-gray-400">
-            &copy; 2024 K.H. Infinity. All rights reserved.
+            &copy; 2025 K.H. Infinity. All rights reserved.
           </p>
         </div>
       </div>
