--- a/services.html
+++ b/services.html
@@ -3,7 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Our Services - K.H. Infinity</title>
+    <title>Our Services - K.H. Infinity | Global Trade Solutions</title>
+    <meta
+      name="description"
+      content="Comprehensive import-export services, logistics solutions, and trade consulting by K.H. Infinity."
+    />
+    <meta
+      name="keywords"
+      content="import export, logistics, trade consulting, K.H. Infinity, services"
+    />
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/mobile.css" />
@@ -12,52 +21,9 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
   </head>
-  <body class="font-sans">
+  <body class="font-sans bg-gray-50" data-theme="gray">
     <!-- Header -->
-    <header class="header bg-white fixed w-full top-0 z-50 shadow-md">
-      <div class="container mx-auto px-4">
-        <nav class="flex justify-between items-center py-4">
-          <a href="/" class="text-2xl font-bold text-orange-500"
-            >K.H. Infinity</a
-          >
-          <ul class="hidden md:flex space-x-8">
-            <li>
-              <a
-                href="index.html#about"
-                class="hover:text-orange-500 transition-colors"
-                >About Us</a
-              >
-            </li>
-            <li>
-              <a
-                href="products.html"
-                class="hover:text-orange-500 transition-colors"
-                >Products</a
-              >
-            </li>
-            <li>
-              <a
-                href="services.html"
-                class="hover:text-orange-500 transition-colors"
-                >Services</a
-              >
-            </li>
-            <li>
-              <a
-                href="contact.html"
-                class="hover:text-orange-500 transition-colors"
-                >Contact Us</a
-              >
-            </li>
-          </ul>
-          <button
-            class="bg-orange-500 text-white px-6 py-2 rounded-lg hover:bg-orange-600 transition-colors"
-          >
-            Get In Touch
-          </button>
-        </nav>
-      </div>
-    </header>
+    <div id="header"></div>
 
     <!-- Services Hero -->
     <section
@@ -235,10 +201,10 @@
     </section>
 
     <!-- Footer -->
-    <footer class="bg-gray-800 text-white py-12">
-      <!-- ... footer content ... -->
-    </footer>
+    <div id="footer"></div>
 
     <script src="js/main.js"></script>
+    <script src="js/products-data.js"></script>
+    <script src="js/components.js"></script>
   </body>
 </html>
