--- a/contact.html
+++ b/contact.html
@@ -12,56 +12,9 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
   </head>
-  <body class="font-sans">
+  <body class="font-sans bg-gray-50" data-theme="gray">
     <!-- Header -->
-    <header class="header bg-white fixed w-full top-0 z-50 shadow-md">
-      <div class="container mx-auto px-4">
-        <nav class="flex justify-between items-center py-4">
-          <a href="/" class="text-2xl font-bold text-orange-500">
-            <img
-              src="images/brand/official_logo.svg"
-              alt="K.H. Infinity"
-              class="w-20 h-10"
-            />
-          </a>
-          <ul class="hidden md:flex space-x-8">
-            <li>
-              <a
-                href="index.html#about"
-                class="hover:text-orange-500 transition-colors"
-                >About Us</a
-              >
-            </li>
-            <li>
-              <a
-                href="products.html"
-                class="hover:text-orange-500 transition-colors"
-                >Products</a
-              >
-            </li>
-            <li>
-              <a
-                href="services.html"
-                class="hover:text-orange-500 transition-colors"
-                >Services</a
-              >
-            </li>
-            <li>
-              <a
-                href="contact.html"
-                class="hover:text-orange-500 transition-colors"
-                >Contact Us</a
-              >
-            </li>
-          </ul>
-          <button
-            class="bg-orange-500 text-white px-6 py-2 rounded-lg hover:bg-orange-600 transition-colors"
-          >
-            Get In Touch
-          </button>
-        </nav>
-      </div>
-    </header>
+    <div id="header"></div>
 
     <!-- Contact Hero -->
     <section
@@ -157,7 +110,8 @@
                   <div>
                     <h4 class="font-bold mb-1">Head Office</h4>
                     <p class="text-gray-600">
-                      123 Business District, Dhaka, Bangladesh
+                      Kader Tropical Height, Shop- G5, 10 Hatkhola Road,
+                      Tikatuli, Wari, Dhaka 1203, Bangladesh
                     </p>
                   </div>
                 </div>
@@ -165,7 +119,7 @@
                   <i class="fas fa-phone text-orange-500 mt-1 mr-4 text-xl"></i>
                   <div>
                     <h4 class="font-bold mb-1">Phone</h4>
-                    <p class="text-gray-600">+880 XXXXXXXXXX</p>
+                    <p class="text-gray-600">+880 1577081856</p>
                   </div>
                 </div>
                 <div class="flex items-start">
@@ -251,94 +205,11 @@
     </section>
 
     <!-- Footer -->
-    <footer class="bg-gray-800 text-white py-12">
-      <div class="container mx-auto px-4">
-        <div class="grid md:grid-cols-4 gap-8">
-          <div>
-            <h4 class="text-xl font-bold mb-4">K.H. Infinity</h4>
-            <p class="text-gray-400">
-              Bridging Global Markets with Quality Products
-            </p>
-          </div>
-          <div>
-            <h4 class="text-xl font-bold mb-4">Quick Links</h4>
-            <ul class="space-y-2">
-              <li>
-                <a
-                  href="index.html#about"
-                  class="text-gray-400 hover:text-white"
-                  >About Us</a
-                >
-              </li>
-              <li>
-                <a href="products.html" class="text-gray-400 hover:text-white"
-                  >Products</a
-                >
-              </li>
-              <li>
-                <a href="services.html" class="text-gray-400 hover:text-white"
-                  >Services</a
-                >
-              </li>
-              <li>
-                <a href="contact.html" class="text-gray-400 hover:text-white"
-                  >Contact</a
-                >
-              </li>
-            </ul>
-          </div>
-          <div>
-            <h4 class="text-xl font-bold mb-4">Products</h4>
-            <ul class="space-y-2">
-              <li>
-                <a
-                  href="products/sunflower-oil.html"
-                  class="text-gray-400 hover:text-white"
-                  >Sunflower Oil</a
-                >
-              </li>
-              <li>
-                <a
-                  href="products/milk-powder.html"
-                  class="text-gray-400 hover:text-white"
-                  >Milk Powder</a
-                >
-              </li>
-              <li>
-                <a
-                  href="products/potato.html"
-                  class="text-gray-400 hover:text-white"
-                  >Potatoes</a
-                >
-              </li>
-              <li>
-                <a
-                  href="products/handicrafts.html"
-                  class="text-gray-400 hover:text-white"
-                  >Handicrafts</a
-                >
-              </li>
-            </ul>
-          </div>
-          <div>
-            <h4 class="text-xl font-bold mb-4">Contact Info</h4>
-            <ul class="space-y-2">
-              <li class="text-gray-400">123 Business District</li>
-              <li class="text-gray-400">Dhaka, Bangladesh</li>
-              <li class="text-gray-400">info@khinfinity.com</li>
-              <li class="text-gray-400">+880 XXXXXXXXXX</li>
-            </ul>
-          </div>
-        </div>
-        <div class="border-t border-gray-700 mt-8 pt-8 text-center">
-          <p class="text-gray-400">
-            &copy; 2025 K.H. Infinity. All rights reserved.
-          </p>
-        </div>
-      </div>
-    </footer>
+    <div id="footer"></div>
 
     <script src="js/main.js"></script>
+    <script src="js/products-data.js"></script>
+    <script src="js/components.js"></script>
     <script
       src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap"
       async
