--- a/products/potato.html
+++ b/products/potato.html
@@ -23,52 +23,9 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
   </head>
-  <body class="font-sans bg-green-50">
+  <body class="font-sans bg-green-50" data-theme="green">
     <!-- Header -->
-    <header class="header bg-white fixed w-full top-0 z-50 shadow-md">
-      <div class="container mx-auto px-4">
-        <nav class="flex justify-between items-center py-4">
-          <a href="/" class="text-2xl font-bold text-green-700">
-            <img
-              src="../images/brand/official_logo.svg"
-              alt="K.H. Infinity"
-              class="w-20 h-10"
-            />
-          </a>
-          <ul class="hidden md:flex space-x-8">
-            <li>
-              <a href="/#about" class="hover:text-green-700 transition-colors"
-                >About Us</a
-              >
-            </li>
-            <li>
-              <a
-                href="/products.html"
-                class="hover:text-green-700 transition-colors"
-                >Products</a
-              >
-            </li>
-            <li>
-              <a
-                href="/#services"
-                class="hover:text-green-700 transition-colors"
-                >Services</a
-              >
-            </li>
-            <li>
-              <a href="/#contact" class="hover:text-green-700 transition-colors"
-                >Contact Us</a
-              >
-            </li>
-          </ul>
-          <button
-            class="bg-green-700 text-white px-6 py-2 rounded-lg hover:bg-green-800 transition-colors"
-          >
-            Get In Touch
-          </button>
-        </nav>
-      </div>
-    </header>
+    <div id="header"></div>
 
     <!-- Product Hero -->
     <section class="relative pt-32 pb-20 overflow-hidden">
@@ -553,101 +510,122 @@
       </div>
     </section>
 
-    <!-- Footer -->
-    <footer class="bg-gray-800 text-white py-12">
+    <!-- Applications -->
+    <section class="py-20 bg-white">
       <div class="container mx-auto px-4">
-        <div class="grid md:grid-cols-4 gap-8">
-          <div>
-            <img
-              src="../images/brand/official_logo_lite.svg"
-              alt="K.H. Infinity"
-              class="w-40 h-20"
-            />
-            <p class="text-gray-400 mt-4">
-              Bridging Global Markets with Quality Products
-            </p>
+        <div class="text-center mb-16">
+          <span
+            class="text-green-600 font-medium tracking-wider uppercase text-sm block mb-4"
+            >Use Cases</span
+          >
+          <h2 class="text-3xl font-bold text-gray-800">Applications</h2>
+        </div>
+        <div class="grid grid-cols-2 md:grid-cols-4 gap-8">
+          <div
+            class="bg-green-50 rounded-3xl overflow-hidden group hover:shadow-xl transition-all duration-300"
+          >
+            <div class="aspect-[4/3] relative overflow-hidden">
+              <img
+                src="../images/products/russet-potato.webp"
+                alt="Russet Potatoes"
+                class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-500"
+              />
+              <div
+                class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300"
+              ></div>
+            </div>
+            <div class="p-6">
+              <h3 class="text-xl font-bold text-gray-800 mb-2">
+                Russet Potatoes
+              </h3>
+              <p class="text-gray-600 mb-4">
+                Perfect for baking and frying with a fluffy texture.
+              </p>
+              <ul class="space-y-2 text-gray-600">
+                <li class="flex items-center">
+                  <i class="fas fa-check text-green-700 mr-2"></i>
+                  High starch content
+                </li>
+                <li class="flex items-center">
+                  <i class="fas fa-check text-green-700 mr-2"></i>
+                  Ideal for french fries
+                </li>
+              </ul>
+            </div>
           </div>
-          <div>
-            <h4 class="text-xl font-bold mb-4">Quick Links</h4>
-            <ul class="space-y-2">
-              <li>
-                <a href="/#about" class="text-gray-400 hover:text-white"
-                  >About Us</a
-                >
-              </li>
-              <li>
-                <a href="/products.html" class="text-gray-400 hover:text-white"
-                  >Products</a
-                >
-              </li>
-              <li>
-                <a href="/#services" class="text-gray-400 hover:text-white"
-                  >Services</a
-                >
-              </li>
-              <li>
-                <a href="/#contact" class="text-gray-400 hover:text-white"
-                  >Contact</a
-                >
-              </li>
-            </ul>
+
+          <div
+            class="bg-green-50 rounded-3xl overflow-hidden group hover:shadow-xl transition-all duration-300"
+          >
+            <div class="aspect-[4/3] relative overflow-hidden">
+              <img
+                src="../images/products/red-potato.webp"
+                alt="Red Potatoes"
+                class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-500"
+              />
+              <div
+                class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300"
+              ></div>
+            </div>
+            <div class="p-6">
+              <h3 class="text-xl font-bold text-gray-800 mb-2">Red Potatoes</h3>
+              <p class="text-gray-600 mb-4">
+                Waxy texture perfect for boiling and roasting.
+              </p>
+              <ul class="space-y-2 text-gray-600">
+                <li class="flex items-center">
+                  <i class="fas fa-check text-green-700 mr-2"></i>
+                  Holds shape well
+                </li>
+                <li class="flex items-center">
+                  <i class="fas fa-check text-green-700 mr-2"></i>
+                  Great for salads
+                </li>
+              </ul>
+            </div>
           </div>
-          <div>
-            <h4 class="text-xl font-bold mb-4">Products</h4>
-            <ul class="space-y-2">
-              <li>
-                <a
-                  href="/products/sunflower-oil.html"
-                  class="text-gray-400 hover:text-white"
-                  >Sunflower Oil</a
-                >
-              </li>
-              <li>
-                <a
-                  href="/products/milk-powder.html"
-                  class="text-gray-400 hover:text-white"
-                  >Milk Powder</a
-                >
-              </li>
-              <li>
-                <a
-                  href="/products/potato.html"
-                  class="text-gray-400 hover:text-white"
-                  >Potatoes</a
-                >
-              </li>
-              <li>
-                <a
-                  href="/products/handicrafts.html"
-                  class="text-gray-400 hover:text-white"
-                  >Handicrafts</a
-                >
-              </li>
-            </ul>
-          </div>
-          <div>
-            <h4 class="text-xl font-bold mb-4">Follow Us</h4>
-            <div class="flex space-x-4">
-              <a href="#" class="text-gray-400 hover:text-white text-xl"
-                ><i class="fab fa-facebook"></i
-              ></a>
-              <a href="#" class="text-gray-400 hover:text-white text-xl"
-                ><i class="fab fa-linkedin"></i
-              ></a>
-              <a href="#" class="text-gray-400 hover:text-white text-xl"
-                ><i class="fab fa-instagram"></i
-              ></a>
+
+          <div
+            class="bg-green-50 rounded-3xl overflow-hidden group hover:shadow-xl transition-all duration-300"
+          >
+            <div class="aspect-[4/3] relative overflow-hidden">
+              <img
+                src="../images/products/yellow-potato.webp"
+                alt="Yellow Potatoes"
+                class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-500"
+              />
+              <div
+                class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300"
+              ></div>
+            </div>
+            <div class="p-6">
+              <h3 class="text-xl font-bold text-gray-800 mb-2">
+                Yellow Potatoes
+              </h3>
+              <p class="text-gray-600 mb-4">
+                Versatile variety with buttery flavor.
+              </p>
+              <ul class="space-y-2 text-gray-600">
+                <li class="flex items-center">
+                  <i class="fas fa-check text-green-700 mr-2"></i>
+                  All-purpose use
+                </li>
+                <li class="flex items-center">
+                  <i class="fas fa-check text-green-700 mr-2"></i>
+                  Rich flavor
+                </li>
+              </ul>
             </div>
           </div>
         </div>
-        <div class="border-t border-gray-700 mt-8 pt-8 text-center">
-          <p class="text-gray-400">
-            &copy; 2025 K.H. Infinity. All rights reserved.
-          </p>
-        </div>
       </div>
-    </footer>
+    </section>
+
+    <!-- Footer -->
+    <div id="footer"></div>
 
     <script src="../js/main.js"></script>
+    <script src="../js/products-data.js"></script>
+    <script src="../js/components.js"></script>
   </body>
 </html>
